Review UI: Align counter icons for issue e messages

--- a/public/css/mbc-style.css
+++ b/public/css/mbc-style.css
@@ -562,7 +562,7 @@ a.mbc-close-icon:hover {
  Highlight element in segment unique properties
  */
 .mbc-comment-highlight-segment {
-  left: 13px;
+  left: 17px;
   position: absolute;
   top: 10px;
 }
