--- a/public/css/sass/review_extended.scss
+++ b/public/css/sass/review_extended.scss
@@ -35,8 +35,14 @@ h1, h2, h3, h4, h5, a, input {
                         align-items: center;
                         background: #ffffff;
                         padding: 5px 5px 5px 7px;
+
                     }
                     .re-issue {
+                        .issue-head {
+                            .re-category-issue-head {
+
+                            }
+                        }
                         .issue-activity-icon {
                             .icon-buttons {
                                 display: flex;
